add: hyperlink in EXPLORE MORE button in home.html

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -187,7 +187,7 @@
                         <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
                     </div>
                 </div>
-                <a href="" class="site-btn sb-gradient mt-5">explore more</a>
+                <a href="{% url 'classes' %}" class="site-btn sb-gradient mt-5">explore more</a>
             </div>
         </div>
     </div>
