add: gallary, change stuff in home.html
many more in header and footer

--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,5 +1,54 @@
 {% load static %}
 
+<!-- Gallery Section -->
+<div class="gallery-section">
+    <div class="gallery-slider owl-carousel">
+        <div class="gs-item">
+            <img src="{% static 'img/gallery/1.jpg' %}" alt="">
+            <div class="gs-hover">
+                <i class="fa fa-instagram"></i>
+                <p>ahana.yoga</p>
+            </div>
+        </div>
+        <div class="gs-item">
+            <img src="{% static 'img/gallery/2.jpg' %}" alt="">
+            <div class="gs-hover">
+                <i class="fa fa-instagram"></i>
+                <p>ahana.yoga</p>
+            </div>
+        </div>
+        <div class="gs-item">
+            <img src="{% static 'img/gallery/3.jpg' %}" alt="">
+            <div class="gs-hover">
+                <i class="fa fa-instagram"></i>
+                <p>ahana.yoga</p>
+            </div>
+        </div>
+        <div class="gs-item">
+            <img src="{% static 'img/gallery/4.jpg' %}" alt="">
+            <div class="gs-hover">
+                <i class="fa fa-instagram"></i>
+                <p>ahana.yoga</p>
+            </div>
+        </div>
+        <div class="gs-item">
+            <img src="{% static 'img/gallery/5.jpg' %}" alt="">
+            <div class="gs-hover">
+                <i class="fa fa-instagram"></i>
+                <p>ahana.yoga</p>
+            </div>
+        </div>
+        <div class="gs-item">
+            <img src="{% static 'img/gallery/6.jpg' %}" alt="">
+            <div class="gs-hover">
+                <i class="fa fa-instagram"></i>
+                <p>ahana.yoga</p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Gallery Section end -->
+
 <!-- Footer Section -->
 <footer class="footer-section">
     <div class="container">
@@ -28,12 +77,6 @@
                     </ul>
                 </div>
             </div>
-            <span style="padding-top:65px">
-                <form class="infor-form">
-                    <input type="text" placeholder="Your Email">
-                    <button><img src="{% static 'img/icons/send.png' %}" alt=""></button>
-                </form>
-            </span>
         </div>
         <div class="footer-bottom">
             <div class="row">
