--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -119,7 +119,7 @@
 									<div class="hs-text">
 										<h2>Get slim and toned with yoga</h2>
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nos-trud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-										<div class="site-btn sb-white">Register now</div>
+										<div class="site-btn sb-white"><a href="{% url 'contact' %}">Contact now</a></div>
 									</div>
 								</div>
 							</div>
@@ -133,7 +133,7 @@
 						<div class="hs-text">
 							<h2>Reduce your stress</h2>
 							<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi.</p>
-							<div class="site-btn sb-white">Register now</div>
+							<div class="site-btn sb-white"><a href="{% url 'contact' %}">Contact now</a></div>
 						</div>
 					</div>
 					<div class="hs-img">
