Replaced ahana.yoga to diksha_fitness_studio

--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -20,7 +20,7 @@
                         <img src="{% static 'img/infor/1.jpg' %}" alt="">
                         <div class="insta-hover">
                             <i class="fa fa-instagram"></i>
-                            <p>ahana.yoga</p>
+                            <p>diksha_fitness_studio</p>
                         </div>
                     </div>
                 </div>
@@ -29,7 +29,7 @@
                         <img src="{% static 'img/infor/2.jpg' %}" alt="">
                         <div class="insta-hover">
                             <i class="fa fa-instagram"></i>
-                            <p>ahana.yoga</p>
+                            <p>diksha_fitness_studio</p>
                         </div>
                     </div>
                 </div>
@@ -38,7 +38,7 @@
                         <img src="{% static 'img/infor/3.jpg' %}" alt="">
                         <div class="insta-hover">
                             <i class="fa fa-instagram"></i>
-                            <p>ahana.yoga</p>
+                            <p>diksha_fitness_studio</p>
                         </div>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
                         <img src="{% static 'img/infor/4.jpg' %}" alt="">
                         <div class="insta-hover">
                             <i class="fa fa-instagram"></i>
-                            <p>ahana.yoga</p>
+                            <p>diksha_fitness_studio</p>
                         </div>
                     </div>
                 </div>
@@ -56,7 +56,7 @@
                         <img src="{% static 'img/infor/5.jpg' %}" alt="">
                         <div class="insta-hover">
                             <i class="fa fa-instagram"></i>
-                            <p>ahana.yoga</p>
+                            <p>diksha_fitness_studio</p>
                         </div>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                         <img src="{% static 'img/infor/6.jpg' %}" alt="">
                         <div class="insta-hover">
                             <i class="fa fa-instagram"></i>
-                            <p>ahana.yoga</p>
+                            <p>diksha_fitness_studio</p>
                         </div>
                     </div>
                 </div>
