--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -7,42 +7,42 @@
             <img src="{% static 'img/gallery/1.jpg' %}" alt="">
             <div class="gs-hover">
                 <i class="fa fa-instagram"></i>
-                <p>ahana.yoga</p>
+                <p>diksha_fitness_studio</p>
             </div>
         </div>
         <div class="gs-item">
             <img src="{% static 'img/gallery/2.jpg' %}" alt="">
             <div class="gs-hover">
                 <i class="fa fa-instagram"></i>
-                <p>ahana.yoga</p>
+                <p>diksha_fitness_studio</p>
             </div>
         </div>
         <div class="gs-item">
             <img src="{% static 'img/gallery/3.jpg' %}" alt="">
             <div class="gs-hover">
                 <i class="fa fa-instagram"></i>
-                <p>ahana.yoga</p>
+                <p>diksha_fitness_studio</p>
             </div>
         </div>
         <div class="gs-item">
             <img src="{% static 'img/gallery/4.jpg' %}" alt="">
             <div class="gs-hover">
                 <i class="fa fa-instagram"></i>
-                <p>ahana.yoga</p>
+                <p>diksha_fitness_studio</p>
             </div>
         </div>
         <div class="gs-item">
             <img src="{% static 'img/gallery/5.jpg' %}" alt="">
             <div class="gs-hover">
                 <i class="fa fa-instagram"></i>
-                <p>ahana.yoga</p>
+                <p>diksha_fitness_studio</p>
             </div>
         </div>
         <div class="gs-item">
             <img src="{% static 'img/gallery/6.jpg' %}" alt="">
             <div class="gs-hover">
                 <i class="fa fa-instagram"></i>
-                <p>ahana.yoga</p>
+                <p>diksha_fitness_studio</p>
             </div>
         </div>
     </div>
