--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -21,7 +21,7 @@
 							<img src="{% static 'img/infor/1.jpg' %}" alt="">
 							<div class="insta-hover">
 								<i class="fa fa-instagram"></i>
-								<p>ahana.yoga</p>
+								<p>diksha_fitness_studio</p>
 							</div>
 						</div>
 					</div>
@@ -30,7 +30,7 @@
 							<img src="{% static 'img/infor/2.jpg' %}" alt="">
 							<div class="insta-hover">
 								<i class="fa fa-instagram"></i>
-								<p>ahana.yoga</p>
+								<p>diksha_fitness_studio</p>
 							</div>
 						</div>
 					</div>
@@ -39,7 +39,7 @@
 							<img src="{% static 'img/infor/3.jpg' %}" alt="">
 							<div class="insta-hover">
 								<i class="fa fa-instagram"></i>
-								<p>ahana.yoga</p>
+								<p>diksha_fitness_studio</p>
 							</div>
 						</div>
 					</div>
@@ -48,7 +48,7 @@
 							<img src="{% static 'img/infor/4.jpg' %}" alt="">
 							<div class="insta-hover">
 								<i class="fa fa-instagram"></i>
-								<p>ahana.yoga</p>
+								<p>diksha_fitness_studio</p>
 							</div>
 						</div>
 					</div>
@@ -57,7 +57,7 @@
 							<img src="{% static 'img/infor/5.jpg' %}" alt="">
 							<div class="insta-hover">
 								<i class="fa fa-instagram"></i>
-								<p>ahana.yoga</p>
+								<p>diksha_fitness_studio</p>
 							</div>
 						</div>
 					</div>
@@ -66,7 +66,7 @@
 							<img src="{% static 'img/infor/6.jpg' %}" alt="">
 							<div class="insta-hover">
 								<i class="fa fa-instagram"></i>
-								<p>ahana.yoga</p>
+								<p>diksha_fitness_studio</p>
 							</div>
 						</div>
 					</div>
