some required changes

--- a/src/templates/classes.html
+++ b/src/templates/classes.html
@@ -30,7 +30,7 @@
                                         <img src="/{{ value.img }}" alt="">
                                     </div>
                                     <div class="ci-text">
-                                        <h4>{{ key.title }}</h4>
+                                        <h4>{{ value.title }}</h4>
                                         <div class="ci-metas">
                                             <div class="ci-meta"><i class="material-icons">event_available</i>{{ value.week }}</div>
                                             <div class="ci-meta"><i class="material-icons">alarm_on</i>{{ value.time }}</div>
