--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -3,48 +3,15 @@
 <!-- Gallery Section -->
 <div class="gallery-section">
     <div class="gallery-slider owl-carousel">
-        <div class="gs-item">
-            <img src="{% static 'img/gallery/1.jpg' %}" alt="">
-            <div class="gs-hover">
-                <i class="fa fa-instagram"></i>
-                <p>diksha_fitness_studio</p>
+        {% for image in images %}
+            <div class="gs-item">
+                <img src="{% if image %}{{ image }}{% endif %}" class=rounded-9>
+                <div class="gs-hover">
+                    <i class="fa fa-instagram"></i>
+                    <p>diksha_fitness_studio</p>
+                </div>
             </div>
-        </div>
-        <div class="gs-item">
-            <img src="{% static 'img/gallery/2.jpg' %}" alt="">
-            <div class="gs-hover">
-                <i class="fa fa-instagram"></i>
-                <p>diksha_fitness_studio</p>
-            </div>
-        </div>
-        <div class="gs-item">
-            <img src="{% static 'img/gallery/3.jpg' %}" alt="">
-            <div class="gs-hover">
-                <i class="fa fa-instagram"></i>
-                <p>diksha_fitness_studio</p>
-            </div>
-        </div>
-        <div class="gs-item">
-            <img src="{% static 'img/gallery/4.jpg' %}" alt="">
-            <div class="gs-hover">
-                <i class="fa fa-instagram"></i>
-                <p>diksha_fitness_studio</p>
-            </div>
-        </div>
-        <div class="gs-item">
-            <img src="{% static 'img/gallery/5.jpg' %}" alt="">
-            <div class="gs-hover">
-                <i class="fa fa-instagram"></i>
-                <p>diksha_fitness_studio</p>
-            </div>
-        </div>
-        <div class="gs-item">
-            <img src="{% static 'img/gallery/6.jpg' %}" alt="">
-            <div class="gs-hover">
-                <i class="fa fa-instagram"></i>
-                <p>diksha_fitness_studio</p>
-            </div>
-        </div>
+        {% endfor %}
     </div>
 </div>
 <!-- Gallery Section end -->
