fix: url classes in about.html

--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -120,7 +120,7 @@
                         <li><strong>Email:</strong><a href="mailto:{{email}}"><p>{{email}}</p></a></li>
                         <li><strong>Biography:</strong><p>{{bio}}</p></li>
                     </ul>
-                    <a href="#" class="site-btn sb-gradient">View classes</a>
+		    <a href="{% url "classes" %}" class="site-btn sb-gradient">View classes</a>
                 </div>
             </div>
             <div class="trainer-details-text">
