--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -16,60 +16,17 @@
             </a>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
             <div class="insta-imgs">
+                {% for i in 1|2|3|4|5|6 %}
                 <div class="insta-item">
                     <div class="insta-img">
-                        <img src="{% static 'img/infor/1.jpg' %}" alt="">
+                        <img src="{% static 'img/infor/'|add:i|add:'.jpg' %}" alt="">
                         <div class="insta-hover">
                             <i class="fa fa-instagram"></i>
                             <p>diksha_fitness_studio</p>
                         </div>
                     </div>
                 </div>
-                <div class="insta-item">
-                    <div class="insta-img">
-                        <img src="{% static 'img/infor/2.jpg' %}" alt="">
-                        <div class="insta-hover">
-                            <i class="fa fa-instagram"></i>
-                            <p>diksha_fitness_studio</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="insta-item">
-                    <div class="insta-img">
-                        <img src="{% static 'img/infor/3.jpg' %}" alt="">
-                        <div class="insta-hover">
-                            <i class="fa fa-instagram"></i>
-                            <p>diksha_fitness_studio</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="insta-item">
-                    <div class="insta-img">
-                        <img src="{% static 'img/infor/4.jpg' %}" alt="">
-                        <div class="insta-hover">
-                            <i class="fa fa-instagram"></i>
-                            <p>diksha_fitness_studio</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="insta-item">
-                    <div class="insta-img">
-                        <img src="{% static 'img/infor/5.jpg' %}" alt="">
-                        <div class="insta-hover">
-                            <i class="fa fa-instagram"></i>
-                            <p>diksha_fitness_studio</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="insta-item">
-                    <div class="insta-img">
-                        <img src="{% static 'img/infor/6.jpg' %}" alt="">
-                        <div class="insta-hover">
-                            <i class="fa fa-instagram"></i>
-                            <p>diksha_fitness_studio</p>
-                        </div>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
             <form class="infor-form">
                 <input type="text" placeholder="Your Email">
@@ -135,7 +92,8 @@
                 </div>
             </div>
             <div class="col-lg-8">
-		    <form id="saveform" action="{% url "save" %}" id="saveform" method="post" class="singup-form contact-form"> {% csrf_token %}
+                <form id="saveform" method="post" class="singup-form contact-form" onsubmit="event.preventDefault(); saveFormData();">
+                    {% csrf_token %}
                     <div class="row">
                         <div class="col-md-6">
                             <input type="text" name="fname" id="fname" placeholder="First Name" required>
@@ -144,7 +102,7 @@
                             <input type="text" name="lname" id="lname" placeholder="Last Name" required>
                         </div>
                         <div class="col-md-6">
-				<input type="email" name="email" id="email" placeholder="Your Email" required>
+                            <input type="email" name="email" id="email" placeholder="Your Email" required>
                         </div>
                         <div class="col-md-6">
                             <input type="number" name="mob" id="mob" placeholder="Phone Number" required>
@@ -196,41 +154,28 @@
 </div>
 
 <script>
-	
-    function handleSuccess(response) {
-    	if (response.success) {
-		$('#success-modal').modal('show');
-	} else {
-		$('#failureModal').modal('show');
-	}
-     }
+    function saveFormData() {
+        // Get form data
+        var formData = $("#saveform").serialize();
 
-$("#saveform").submit(function(event) {
-  event.preventDefault(); // Prevent default form submission
-
-  // Get form data
-  var formData = $(this).serialize();
-	alert(formData);
-  $.ajax({
-    type: "POST",
-    url: "{% url 'save' %}", // Replace 'save' with your actual URL name
-    data: formData,
-    dataType: "json",
-    success: function(response) {
-      if (response.success) {
-        $('#success-modal').modal('show'); // Assuming you're using Bootstrap modals
-      } else {
-	      $('#failureModal').modal('show');
-      }
-    },
-    error: function(jqXHR, textStatus, errorThrown) {
-      // Handle AJAX errors (optional)
-      console.error("AJAX error: ", textStatus, errorThrown);
+        $.ajax({
+            type: "POST",
+            url: "{% url 'save' %}", // Replace 'save' with your actual URL name
+            data: formData,
+            dataType: "json",
+            success: function(response) {
+                if (response.success) {
+                    $('#successModal').modal('show');
+                } else {
+                    $('#failureModal').modal('show');
+                }
+            },
+            error: function(jqXHR, textStatus, errorThrown) {
+                // Handle AJAX errors (optional)
+                console.error("AJAX error: ", textStatus, errorThrown);
+            }
+        });
     }
-  });
-});
-
-        
 </script>
 
 
