change: used forloop in Django Template tags for diplaying images

--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -16,7 +16,7 @@
             </a>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
             <div class="insta-imgs">
-                {% for i in 1|2|3|4|5|6 %}
+                {% for i in '123456' %}
                 <div class="insta-item">
                     <div class="insta-img">
                         <img src="{% static 'img/infor/'|add:i|add:'.jpg' %}" alt="">
