add: pattern in phone number field in contact form

--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -105,7 +105,7 @@
                             <input type="email" name="email" id="email" placeholder="Your Email" required>
                         </div>
                         <div class="col-md-6">
-                            <input type="number" name="mob" id="mob" placeholder="Phone Number" required>
+                            <input type="tel" name="mob" id="mob" placeholder="Phone Number" pattern="[0-9]{10}" required>
                         </div>
                         <div class="col-md-12">
                             <textarea name="desc" id="desc" placeholder="Message" required></textarea>
