--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -130,7 +130,7 @@
                 Data saved successfully.
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button id="modalClose" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
@@ -154,6 +154,11 @@
 </div>
 
 <script>
+
+    document.getElementById("modalClose").addEventListener("click", function() {
+        document.getElementById("saveform").reset();
+    });
+
     function saveFormData() {
         // Get form data
         var formData = $("#saveform").serialize();
