fix: href of logo

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div class="header-bottom">
-        <a href="" class="site-logo">
+        <a href="{% url "homepage" %}" class="site-logo">
             <img src="{% static 'img/logo.png' %}" alt="homepage">
         </a>
         <div class="hb-right">
