change: text and add: logo in footer

--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -23,14 +23,14 @@
             <div class="col-lg-3 col-sm-6">
                 <div class="footer-widget">
                     <div class="about-widget">
-                        <img src="{% static 'img/logo-3.png' %}" alt="">
-                        <p>Lorem ipsum dolor sit amet, consec-tetur adipiscing elit sed.</p>
+                        <img src="{% static 'img/logo.png' %}" alt="">
+                        <p>Unveil your inner strength, sculpt your body, and embrace a healthier, more confident you with every step, stretch, and lift</p>
                         <ul>
                             <li><i class="material-icons">phone</i>
-                                <a href="tel:919975336402">+91 99753 36402</a>
+                                <a href="tel:+919975336402">+91 9975336402</a>
                             </li>
-                            <li><i class="material-icons">email</i><a href="mailto:pkhade2865@gamil.com">newMail@gamil.com</a></li>
-                            <li><i class="material-icons">map</i>184 Main Collins Street</li>
+                            <li><i class="material-icons">email</i><a href="mailto:kadamdiksha2002@gmail.com">kadamdiksha2002@gmail.com</a></li>
+                            <li><i class="material-icons">map</i>R.S.No.1028/16, Plot No.2, Swabhimani Mart Building, Near Podar School, Sunanda Park, Kolhapur</li>
                         </ul>
                     </div>
                 </div>
