add: quotes in home

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -166,7 +166,7 @@
                     </div>
                     <div class="ai-text">
                         <h4>Full Rejuvenation</h4>
-                        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p>Awaken your body's true potential, invigorate your spirit, and indulge in the transformative journey of holistic well-being.</p>
                     </div>
                 </div>
                 <div class="about-item">
@@ -175,7 +175,7 @@
                     </div>
                     <div class="ai-text">
                         <h4>Extension of Spring</h4>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem a cusantium doloremque.</p>
+                        <p>Rediscover the vitality of life as you blossom into a stronger, healthier, and more vibrant version of yourself with each new season of personal growth.</p>
                     </div>
                 </div>
                 <div class="about-item">
@@ -184,7 +184,7 @@
                     </div>
                     <div class="ai-text">
                         <h4>Against Aging</h4>
-                        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
+                        <p>Defy the hands of time and reveal a rejuvenated, radiant, and empowered self as you embrace the timeless journey of self-care and vitality.</p>
                     </div>
                 </div>
                 <a href="{% url 'classes' %}" class="site-btn sb-gradient mt-5">explore more</a>
