--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -4314,3 +4314,21 @@ only screen and (min-width: 576px) and (max-width: 767px),
 .contact-form {
 	padding-top: 10px;
 }
+
+/*---------------------
+  Custom css
+-----------------------*/
+.transperentBtn {
+	font-family: var(--font-primary);
+	font-weight: 500;
+	font-size: 15px;
+	letter-spacing: 1px;
+	display: inline-block;
+	padding: 14px 40px;
+	border-radius: 50px;
+	transition: 0.3s;
+	color: #fff;
+	background: rgba(255, 255, 255, 0.1);
+	box-shadow: 0 0 15px rgba(0, 0, 0, 0.08);
+	border: 2px solid rgba(255, 255, 255, 0.1);
+  }
