logic: vercel blob storage

--- a/src/templates/classes.html
+++ b/src/templates/classes.html
@@ -27,7 +27,7 @@
                             <div class="classes-item-warp">
                                 <div class="classes-item">
                                     <div class="ci-img">
-                                        <img src="/{{ value.img }}" alt="">
+                                        <img src="{{ value.img }}" alt="">
                                     </div>
                                     <div class="ci-text">
                                         <h4>{{ value.title }}</h4>
