fix: img not loading in classes section

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -206,7 +206,7 @@
 			{% for key, value in data.items %}
 				<div class="classes-item">
 					<div class="ci-img">
-						<img src="/{{ value.img }}" alt="">
+						<img src="{{ value.img }}" alt="">
 					</div>
 					<div class="ci-text">
 						<h4><a href="classes-details.html">{{ value.title }}</a></h4>
