add: blob storage for about and gallery section
need to fix: del() logic and gallery images are not loading...

--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -103,7 +103,7 @@
         <div class="trainer-details">
             <div class="trainer-info">
                 <div class="td-left">
-                    <img src="/{{ image }}" alt="">
+                    <img src="{{ image }}" alt="">
                     <div class="td-social">
 
                         {% for title, link in hyperlinks.items %}
