add: quotes in homepage

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -118,7 +118,7 @@
 								<div class="hs-text-warp">
 									<div class="hs-text">
 										<h2>Get slim and toned with yoga</h2>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nos-trud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+										<p>"Unleash your inner strength and embrace a healthier, fitter, and more balanced lifestyle through the powerful combination of mindful movement and deep connection at Diksha Fitness Studio." </p>
 										<div class="site-btn sb-white"><a href="{% url 'contact' %}" class="transperentBtn">Contact now</a></div>
 									</div>
 								</div>
@@ -132,7 +132,7 @@
 					<div class="container">
 						<div class="hs-text">
 							<h2>Reduce your stress</h2>
-							<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi.</p>
+							<p> "Unwind, rejuvenate, and re-energize at Diksha Fitness Studio, where our transformative yoga sessions help you release tension and reduce stress for a more balanced, harmonious life." </p>
 							<div class="site-btn sb-white"><a href="{% url 'contact' %}" class="transperentBtn">Contact now</a></div>
 						</div>
 					</div>
