--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -7,7 +7,7 @@
             <div class="col-md-6 d-none d-md-block p-0">
                 <div class="header-info">
                     <i class="material-icons">map</i>
-                    <p>change addr</p>
+		    <p><a href="https://maps.app.goo.gl/NEq5ZV1HxMVVajxdA">Swabhimani Mart Bulding</a></p>
                 </div>
                 <div class="header-info">
                     <i class="material-icons">phone</i>
